--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,8 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # Find packages and config files
-find_package(raylib 3.0 REQUIRED)
-find_package(glfw3 REQUIRED)
+# find_package(raylib 3.0 REQUIRED)
+# find_package(glfw3 REQUIRED)
 find_package(ftxui REQUIRED)
 
 # Add executables (.cpp) files
@@ -19,8 +19,8 @@ add_executable(${PROJECT_NAME} phosphor/src/main.cpp)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/phosphor/include)
 
 target_link_libraries(${PROJECT_NAME}
-    raylib 
-    glfw
+    # raylib 
+    # glfw
     ftxui::screen
     ftxui::dom
     ftxui::component
