--- a/phosphor/CMakeLists.txt
+++ b/phosphor/CMakeLists.txt
@@ -4,6 +4,7 @@ find_package(glfw3 REQUIRED)
 add_library(phosphlib
     phosphlib/app/app.cpp
     #phosphlib/io/
+    phosphlib/editor/editor.cpp
 )
 
 target_include_directories(phosphlib
